Fixed github logo alignment

--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ main {
 }
 
 .project .link--icon {
-  margin-left: 0.5em;
+  /*margin-left: 0.5em*/;
 }
 
 .skills__list {
